--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -15,7 +15,12 @@
             </mat-chip-list>
         </section>
     </ng-container>
-    <mat-paginator [pageSize]="50" [hidePageSize]="true" (page)="onSelectPage($event)"></mat-paginator>
+    <div class="flex-container-row">
+        <mat-spinner [diameter]="20" *ngIf="isLoadingResults"></mat-spinner>
+        <mat-paginator [pageSize]="50" [hidePageSize]="true" (page)="onSelectPage($event)"></mat-paginator>
+    </div>
+    <!-- <mat-spinner [diameter]="20" *ngIf="isLoadingResults"></mat-spinner>
+    <mat-paginator [pageSize]="50" [hidePageSize]="true" (page)="onSelectPage($event)"></mat-paginator> -->
 </section>
 <section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
     <table mat-table matSort [dataSource]="dataSource" class="mat-cell" aria-label="Elements" class="mat-elevation-z8">
