--- a/src/app/webviewer-main/report-image-list/report-image-list.component.html
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.html
@@ -28,7 +28,7 @@
         onselectstart='return false;'
         onmousedown='return false;'>
         <div #dicomImage
-            style="width:790px; height:790px; display: flex; justify-content: center;
+            style="width: inherit; height:inherit; display: flex; justify-content: center;
             align-items: center;">
         </div>
 
