--- a/src/app/header/toolbar/toolbar-users/users-dialog/new-user-dialog.component.html
+++ b/src/app/header/toolbar/toolbar-users/users-dialog/new-user-dialog.component.html
@@ -10,18 +10,18 @@
             <div class="mat-dialog-content flex-container input-user-info">
                 <!-- username field -->
                 <h5>User Name *</h5>
-                <input class="userinfo" type="text" formControlName="name" placeholder="name" [class.error]="name.errors?.required && (name.dirty || name.touched)"/>
-                <div *ngIf="name.errors?.required && (name.dirty || name.touched)" class="form-error-msg">
-                    <div *ngIf="name.errors.required">
+                <input class="userinfo" type="text" formControlName="name" placeholder="name" [class.error]="name.invalid && (name.dirty || name.touched)"/>
+                <div *ngIf="name.invalid && (name.dirty || name.touched)" class="form-error-msg">
+                    <div *ngIf="name.errors?.required">
                         <span class="material-icons">priority_high</span>
                         Name is required.
                     </div>
                 </div>
                 <!-- userid field -->
                 <h5>User ID *</h5>
-                <input class="userinfo" type="text" formControlName="id" placeholder="id" [class.error]="id.errors?.required && (id.dirty || id.touched) || duplicatedId"/>
-                <div *ngIf="id.errors?.required && (id.dirty || id.touched)" class="form-error-msg">
-                    <div *ngIf="id.errors.required">
+                <input class="userinfo" type="text" formControlName="id" placeholder="id" [class.error]="id.invalid && (id.dirty || id.touched) || duplicatedId"/>
+                <div *ngIf="id.invalid && (id.dirty || id.touched)" class="form-error-msg">
+                    <div *ngIf="id.errors?.required">
                         <!-- <span class="material-icons">warning_amber</span> -->
                         <span class="material-icons">priority_high</span>
                         ID is required.
@@ -36,17 +36,25 @@
                     <!-- userpassword field -->
                     <h5>User Password *</h5>
                     <input class="userinfo" id="pwdInput" [type]="fieldTextType ? 'text' : 'password'" formControlName="password" placeholder="At least 8 characters" [class.error]="(createUserForm.get('passwordGroup.password').dirty || 
-                    createUserForm.get('passwordGroup.password').touched) && (createUserForm.get('passwordGroup.password').errors)"/>
+                    createUserForm.get('passwordGroup.password').touched) && (createUserForm.get('passwordGroup.password').invalid)"/>
                     <button matSuffix (click)="togglePwdHide()" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="fieldTextType" [style.color]="'#0094d2'" [style.background]="'#2B2B2B'" [style.border]="'none'" type="button">
                         <mat-icon>{{fieldTextType ? 'visibility' : 'visibility_off'}}</mat-icon>
                     </button>
-                    <div *ngIf="createUserForm.get('passwordGroup.password').errors?.required && (createUserForm.get('passwordGroup.password').dirty || createUserForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                    <div *ngIf="createUserForm.get('passwordGroup.password').invalid && (createUserForm.get('passwordGroup.password').dirty || createUserForm.get('passwordGroup.password').touched)" class="form-error-msg">
                         <div *ngIf="createUserForm.get('passwordGroup.password').errors?.required">
                             <span class="material-icons">priority_high</span>
                             Password is required.
                         </div>
+                        <div *ngIf="createUserForm.get('passwordGroup.password').errors?.minlength">
+                            <span class="material-icons">priority_high</span>
+                            Password must be at least 8 characters
+                        </div>
+                        <div *ngIf="createUserForm.get('passwordGroup.password').errors?.pattern">
+                            <span class="material-icons">priority_high</span>
+                            Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
+                        </div>
                     </div>
-                    <div *ngIf="createUserForm.get('passwordGroup.password').errors?.minlength || createUserForm.get('passwordGroup.password').errors?.pattern && (createUserForm.get('passwordGroup.password').dirty || createUserForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                    <!-- <div *ngIf="createUserForm.get('passwordGroup.password').errors?.minlength || createUserForm.get('passwordGroup.password').errors?.pattern && (createUserForm.get('passwordGroup.password').dirty || createUserForm.get('passwordGroup.password').touched)" class="form-error-msg">
                         <div *ngIf="createUserForm.get('passwordGroup.password').errors.minlength">
                             <span class="material-icons">priority_high</span>
                             Password must be at least 8 characters
@@ -55,14 +63,14 @@
                             <span class="material-icons">priority_high</span>
                             Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
                         </div>
-                    </div>
+                    </div> -->
 
                     <h5>Confirm Password *</h5>
                     <input class="userinfo" id="pwdConfirmInput" type="password" formControlName="confirmPassword" placeholder="Re-enter your password"
                         [class.error]="(createUserForm.get('passwordGroup.confirmPassword').dirty || 
-                        createUserForm.get('passwordGroup.confirmPassword').touched) && (createUserForm.get('passwordGroup.confirmPassword').errors?.required || createUserForm.controls.passwordGroup.errors?.passwordMismatch)"/>
-                    <div *ngIf="createUserForm.get('passwordGroup.confirmPassword').errors?.required && (createUserForm.get('passwordGroup.confirmPassword').dirty || createUserForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
-                        <div *ngIf="createUserForm.get('passwordGroup.confirmPassword').errors.required">
+                        createUserForm.get('passwordGroup.confirmPassword').touched) && createUserForm.get('passwordGroup.confirmPassword').errors?.required || createUserForm.controls.passwordGroup.errors?.passwordMismatch"/>
+                    <div *ngIf="createUserForm.get('passwordGroup.confirmPassword').invalid && (createUserForm.get('passwordGroup.confirmPassword').dirty || createUserForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
+                        <div *ngIf="createUserForm.get('passwordGroup.confirmPassword').errors?.required">
                             <span class="material-icons">priority_high</span>
                             Re-enter your password
                         </div>
@@ -90,6 +98,7 @@
             </div>
         </form>
     </section>
+
     <section class="update_personal" *ngIf="userPermission === 'PHYSICIAN'">
         <form [formGroup]="updatePersonalForm" (ngSubmit)="onSubmit(updatePersonalForm)" (keydown.enter)="enterToSubmit($event)">
             <div class="mat-dialog-content flex-container input-user-info">
@@ -99,8 +108,8 @@
 
                 <!-- username field -->
                 <h5>User Name</h5>
-                <input class="userinfo" type="text" formControlName="name" placeholder="name" [class.error]="name.errors?.required && (name.dirty || name.touched)"/>
-                <div *ngIf="name.errors?.required && (name.dirty || name.touched)" class="form-error-msg">
+                <input class="userinfo" type="text" formControlName="name" placeholder="name" [class.error]="name.invalid && (name.dirty || name.touched)"/>
+                <div *ngIf="name.invalid && (name.dirty || name.touched)" class="form-error-msg">
                     <div *ngIf="name.errors.required">
                         <span class="material-icons">priority_high</span>
                         Name is required.
@@ -111,40 +120,48 @@
                     <!-- userpassword field -->
                     <h5>User Password *</h5>
                     <input class="userinfo" id="pwdInput" [type]="fieldTextType ? 'text' : 'password'" formControlName="password" placeholder="At least 8 characters" [class.error]="(updatePersonalForm.get('passwordGroup.password').dirty || 
-                    updatePersonalForm.get('passwordGroup.password').touched) && (updatePersonalForm.get('passwordGroup.password').errors)"/>
+                    updatePersonalForm.get('passwordGroup.password').touched) && (updatePersonalForm.get('passwordGroup.password').invalid)"/>
                     <button matSuffix (click)="togglePwdHide()" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="fieldTextType" [style.color]="'#0094d2'" [style.background]="'#2B2B2B'" [style.border]="'none'" type="button">
                         <mat-icon>{{fieldTextType ? 'visibility' : 'visibility_off'}}</mat-icon>
                     </button>
-                    <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.required && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                    <div *ngIf="updatePersonalForm.get('passwordGroup.password').invalid && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
                         <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.required">
                             <span class="material-icons">priority_high</span>
                             Password is required.
                         </div>
-                    </div>
-                    <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.minlength || updatePersonalForm.get('passwordGroup.password').errors?.pattern && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
-                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors.minlength">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.minlength">
                             <span class="material-icons">priority_high</span>
                             Password must be at least 8 characters
                         </div>
-                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors.pattern">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.pattern">
                             <span class="material-icons">priority_high</span>
                             Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
                         </div>
                     </div>
+                    <!-- <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.minlength || updatePersonalForm.get('passwordGroup.password').errors?.pattern && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.minlength">
+                            <span class="material-icons">priority_high</span>
+                            Password must be at least 8 characters
+                        </div>
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.pattern">
+                            <span class="material-icons">priority_high</span>
+                            Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
+                        </div>
+                    </div> -->
 
                     <h5>Confirm Password *</h5>
                     <input class="userinfo" id="pwdConfirmInput" type="password" formControlName="confirmPassword" placeholder="Re-enter your password"
                         [class.error]="(updatePersonalForm.get('passwordGroup.confirmPassword').dirty || 
-                        updatePersonalForm.get('passwordGroup.confirmPassword').touched) && (updatePersonalForm.get('passwordGroup.confirmPassword').errors?.required || updatePersonalForm.controls.passwordGroup.errors?.passwordMismatch)"/>
-                    <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').errors?.required && (updatePersonalForm.get('passwordGroup.confirmPassword').dirty || updatePersonalForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
-                        <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').errors.required">
+                        updatePersonalForm.get('passwordGroup.confirmPassword').touched) && updatePersonalForm.get('passwordGroup.confirmPassword').invalid"/>
+                    <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').invalid && (updatePersonalForm.get('passwordGroup.confirmPassword').dirty || updatePersonalForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').errors?.required">
                             <span class="material-icons">priority_high</span>
                             Re-enter your password
                         </div>
-                    </div>
-                    <div *ngIf="updatePersonalForm.controls.passwordGroup.errors?.passwordMismatch" class="form-error-msg">
-                        <span class="material-icons">priority_high</span>
-                        Password does not match
+                        <div *ngIf="updatePersonalForm.controls.passwordGroup.errors?.passwordMismatch" class="form-error-msg">
+                            <span class="material-icons">priority_high</span>
+                            Password does not match
+                        </div>
                     </div>
                 </div>
             </div>
