--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,6 +1,8 @@
 .signin-container{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .login {
@@ -203,9 +205,9 @@
     justify-content: center;
     font-weight: 500;
     position: absolute;
-    bottom: 10rem;
-    left: 40.65%;
-    right: 1rem;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    bottom: 10%;
     width: 22.5rem;
     opacity: 0;
     transition: opacity .3s ease-in-out;
