fix: replace project name and change nest server api
server-url : localhost:3000/api/v1

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -3,7 +3,7 @@
     <form class="login" [formGroup]="changePwdForm" (ngSubmit)="onSubmit()" style="background-color:#2B2B2B">
         <label class="title">
             <h4 class="welcome">Change Password</h4>
-            <div class="prd-name">JUNO</div>
+            <div class="prd-name">YURIM</div>
             <div class="hint">
                 <h5 class="hint-msg">{{explanation}}</h5>
                 <h5 class="hint-msg">Change to new password.</h5>
