--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="flex-container-row">
         <div class="top-left-layout">
             <img width="30vw" height="50%" style="padding: 13px;" src="assets/icons/LuCAS_symbol_blue.png">
-            <h2>JUNO</h2>
+            <h2>YURIM</h2>
         </div>
         <div class="top-right-layout">
             <div style="float: right;">
