--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,7 +3,7 @@
     <form class="login" [formGroup]="signInForm" (ngSubmit)="onSubmit()" style="background-color:#2B2B2B">
         <label class="title">
             <h4 class="welcome">Sign in to</h4>
-            <div class="prd-name">JUNO</div>
+            <div class="prd-name">YURIM</div>
             <h5 class="hint" *ngIf="!passwordExpired">Enter your username and password.</h5>
             <h5 class="hint" *ngIf="passwordExpired">Your password has been expired. Change to new password.</h5>
         </label>
